--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -106,7 +106,7 @@
                             <div class="col-md-12">
                               <p class="mbr-fonts-style panel-text display-7">
                                 <strong>
-                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/inviluppo.maxpat" class="text-primary"><b>inviluppo</b></a>
+                                  - <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/inviluppo.maxpat" class="text-primary"><b>inviluppo</b></a>
                                   <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/glissando.maxpat" class="text-primary"><b>glissando</b></a>
                                   <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/maschera_di_tendenza.maxpat" class="text-primary"><b>maschera di tendenza</b></a>
                                   <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/random.maxpat" class="text-primary"><b>random</b></a>
@@ -122,7 +122,7 @@
                             <div class="col-md-12">
                               <p class="mbr-fonts-style panel-text display-7">
                                 <strong>
-                                  <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/oscillatore_sinusoidale.maxpat" class="text-primary"><b>inviluppo</b></a>
+                                  - <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/oscillatore_sinusoidale.maxpat" class="text-primary"><b>inviluppo</b></a>
                                   <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/sintesi_additiva.maxpat" class="text-primary"><b>glissando</b></a>
                                   <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/am_rm.maxpat" class="text-primary"><b>maschera di tendenza</b></a>
                                   <br>- <a href="https://www.gabrielavelitch.com/downloads/maxmsp/control/fm.maxpat" class="text-primary"><b>random</b></a>
