--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -153,7 +153,7 @@
                                                               <div class="panel-body">
                                                                   <p class="mbr-fonts-style panel-text display-7">
                                                                     <strong>
-                                                                      <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_maths_library.html" class="text-primary"><b>Maths</b></a>
+                                                                      - <a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_maths_library.html" class="text-primary"><b>Maths</b></a>
                                                                       <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_filters_library.html" class="text-primary"><b>Filters</b></a>
                                                                       <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_effects_library.html" class="text-primary"><b>Effects</b></a>
                                                                     </strong>
@@ -173,7 +173,7 @@
                                                               <div class="panel-body">
                                                                   <p class="mbr-fonts-style panel-text display-7">
                                                                     <strong>
-                                                                      <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/onepole.html" class="text-primary"><b>onepole</b></a>
+                                                                      - <a href="https://www.gabrielavelitch.com/pages/maxmsp/onepole.html" class="text-primary"><b>onepole</b></a>
                                                                       <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/allpass.html" class="text-primary"><b>allpass</b></a>
                                                                       <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/biquad.html" class="text-primary"><b>biquad</b></a>
                                                                       <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/combfilter.html" class="text-primary"><b>combfilter</b></a>
@@ -199,7 +199,7 @@
                                                               <div class="panel-body">
                                                                   <p class="mbr-fonts-style panel-text display-7">
                                                                     <strong>
-                                                                      <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/schroeder_JCRev.html" class="text-primary"><b>schroeder JCRev</b></a>
+                                                                      - <a href="https://www.gabrielavelitch.com/pages/maxmsp/schroeder_JCRev.html" class="text-primary"><b>schroeder JCRev</b></a>
                                                                       <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/freeverb.html" class="text-primary"><b>freeverb</b></a>
                                                                       <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/flanger.html" class="text-primary"><b>flanger</b></a>
                                                                     </strong>
