--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -137,82 +137,30 @@
                         <div class="row">
                             <div class="col-md-12">
 
-                              <section data-bs-version="5.1" class="content17 cid-t0WGFEERur" id="content17-1j">
-                                  <div class="container">
-                                          <div class="row justify-content-center">
-                                              <div class="col-12 col-md-10">
-                                                  <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
-                                                      <div class="card mb-3">
-                                                          <div class="card-header" role="tab" id="headingOne">
-                                                              <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse1_2" aria-expanded="false" aria-controls="collapse1">
-                                                                  <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Libraries</strong></h6>
-                                                                  <span class="sign mbr-iconfont mbri-arrow-down"></span>
-                                                              </a>
-                                                          </div>
-                                                          <div id="collapse1_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
-                                                              <div class="panel-body">
-                                                                  <p class="mbr-fonts-style panel-text display-7">
-                                                                    <strong>
-                                                                      - <a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_maths_library.html" class="text-primary"><b>Maths</b></a>
-                                                                      <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_filters_library.html" class="text-primary"><b>Filters</b></a>
-                                                                      <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_effects_library.html" class="text-primary"><b>Effects</b></a>
-                                                                    </strong>
-                                                              </div>
-                                                          </div>
-                                                      </div>
-
-
-                                                      <div class="card mb-3">
-                                                          <div class="card-header" role="tab" id="headingTwo">
-                                                              <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2_2" aria-expanded="false" aria-controls="collapse2">
-                                                                  <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Filters</strong></h6>
-                                                                  <span class="sign mbr-iconfont mbri-arrow-down"></span>
-                                                              </a>
-                                                          </div>
-                                                          <div id="collapse2_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
-                                                              <div class="panel-body">
-                                                                  <p class="mbr-fonts-style panel-text display-7">
-                                                                    <strong>
-                                                                      - <a href="https://www.gabrielavelitch.com/pages/maxmsp/onepole.html" class="text-primary"><b>onepole</b></a>
-                                                                      <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/allpass.html" class="text-primary"><b>allpass</b></a>
-                                                                      <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/biquad.html" class="text-primary"><b>biquad</b></a>
-                                                                      <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/combfilter.html" class="text-primary"><b>combfilter</b></a>
-                                                                      <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_fir.html" class="text-primary"><b>comb FIR</b></a>
-                                                                      <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir.html" class="text-primary"><b>comb IIR</b></a>
-                                                                      <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir_vs_fir.html" class="text-primary"><b>comb IIR vs FIR</b></a>
-                                                                      <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/svf.html" class="text-primary"><b>svf</b></a>
-                                                                    </strong>
-                                                                    </p>
-                                                              </div>
-                                                          </div>
-                                                      </div>
-
-
-                                                      <div class="card mb-3">
-                                                          <div class="card-header" role="tab" id="headingTwo">
-                                                              <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse3_2" aria-expanded="false" aria-controls="collapse3">
-                                                                  <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Effects & Reverbs</strong></h6>
-                                                                  <span class="sign mbr-iconfont mbri-arrow-down"></span>
-                                                              </a>
-                                                          </div>
-                                                          <div id="collapse3_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
-                                                              <div class="panel-body">
-                                                                  <p class="mbr-fonts-style panel-text display-7">
-                                                                    <strong>
-                                                                      - <a href="https://www.gabrielavelitch.com/pages/maxmsp/schroeder_JCRev.html" class="text-primary"><b>schroeder JCRev</b></a>
-                                                                      <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/freeverb.html" class="text-primary"><b>freeverb</b></a>
-                                                                      <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/flanger.html" class="text-primary"><b>flanger</b></a>
-                                                                    </strong>
-                                                                    </p>
-                                                              </div>
-                                                          </div>
-                                                      </div>
-                                                    </div>
-                                              </div>
-                                          </div>
-                                      </div>
-                              </section>
-
+                              <p class="mbr-text mbr-fonts-style display-7">
+                                <strong>
+                                  LIBRARIES
+                                  <ul>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_maths_library.html" class="text-primary"><b>Maths</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_filters_library.html" class="text-primary"><b>Filters</b></a>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_effects_library.html" class="text-primary"><b>Effects</b></a>
+                                </ul>
+                                  FILTERS
+                                  <ul>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/onepole.html" class="text-primary"><b>onepole</b></a>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/allpass.html" class="text-primary"><b>allpass</b></a>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/biquad.html" class="text-primary"><b>biquad</b></a>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/combfilter.html" class="text-primary"><b>combfilter</b></a>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_fir.html" class="text-primary"><b>comb FIR</b></a>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir.html" class="text-primary"><b>comb IIR</b></a>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir_vs_fir.html" class="text-primary"><b>comb IIR vs FIR</b></a>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/svf.html" class="text-primary"><b>svf</b></a>
+                                </ul>
+                                EFFECTS & REVERBS
+                                <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/schroeder_JCRev.html" class="text-primary"><b>schroeder JCRev</b></a>
+                                <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/freeverb.html" class="text-primary"><b>freeverb</b></a>
+                                <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/flanger.html" class="text-primary"><b>flanger</b></a>
+                                  </strong>
                             </div>
                         </div>
                     </div>
