--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -142,27 +142,27 @@
                                   LIBRARIES
                                   <ul>
                                   <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_maths_library.html" class="text-primary"><b>Maths</b></a></li>
-                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_filters_library.html" class="text-primary"><b>Filters</b></a>
-                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_effects_library.html" class="text-primary"><b>Effects</b></a>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_filters_library.html" class="text-primary"><b>Filters</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/GKV_effects_library.html" class="text-primary"><b>Effects</b></a></li>
                                 </ul>
-                                <p class="mbr-text mbr-fonts-style display-7">
                                   FILTERS
+                                  <p class="mbr-text mbr-fonts-style display-7">
                                   <ul>
-                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/onepole.html" class="text-primary"><b>onepole</b></a>
-                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/allpass.html" class="text-primary"><b>allpass</b></a>
-                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/biquad.html" class="text-primary"><b>biquad</b></a>
-                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/combfilter.html" class="text-primary"><b>combfilter</b></a>
-                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_fir.html" class="text-primary"><b>comb FIR</b></a>
-                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir.html" class="text-primary"><b>comb IIR</b></a>
-                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir_vs_fir.html" class="text-primary"><b>comb IIR vs FIR</b></a>
-                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/svf.html" class="text-primary"><b>svf</b></a>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/onepole.html" class="text-primary"><b>onepole</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/allpass.html" class="text-primary"><b>allpass</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/biquad.html" class="text-primary"><b>biquad</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/combfilter.html" class="text-primary"><b>combfilter</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_fir.html" class="text-primary"><b>comb FIR</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir.html" class="text-primary"><b>comb IIR</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir_vs_fir.html" class="text-primary"><b>comb IIR vs FIR</b></a></li>
+                                  <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/svf.html" class="text-primary"><b>svf</b></a></li>
                                 </ul>
                                 EFFECTS & REVERBS
                                 <p class="mbr-text mbr-fonts-style display-7">
                                   <ul>
-                                <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/schroeder_JCRev.html" class="text-primary"><b>schroeder JCRev</b></a>
-                                <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/freeverb.html" class="text-primary"><b>freeverb</b></a>
-                                <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/flanger.html" class="text-primary"><b>flanger</b></a>
+                                <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/schroeder_JCRev.html" class="text-primary"><b>schroeder JCRev</b></a></li>
+                                <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/freeverb.html" class="text-primary"><b>freeverb</b></a></li>
+                                <li><a href="https://www.gabrielavelitch.com/pages/maxmsp/flanger.html" class="text-primary"><b>flanger</b></a></li>
                                   </ul>
                                   <br><br>
                                   </strong>
